app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sample-php
  name: sample-php
  namespace: myns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-php
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sample-php
    spec:
      containers:
      - image: docker.io/christianh814/sample-php:latest
        name: sample-php
        volumeMounts:
        - name: config-vol
          mountPath: /etc/myapp
        resources: {}
      volumes:
        - name: config-vol
          configMap:
            name: myconfig
